--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header {
     font-size: x-large;
     font-family: var(--font-header-footer);
     color: var(--primary-color);
-    padding: 2rem;
+    padding: 1rem 2rem;
 }
 
 .nombre-tienda {
@@ -56,7 +56,7 @@ ul {
     justify-content: center;
     gap: 2.5rem;
     list-style: none;
-    margin: 1.5rem 0 0;
+    margin-top: 0.5rem;
 }
 
 a {
@@ -154,7 +154,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-style: #7C7C9C;
+    color: #7C7C9C;
     height: 100%;
 }
 
@@ -164,7 +164,7 @@ a:hover {
     margin-bottom: 0.8rem;
 }
 
-.producto-detalle button {
+.btn-producto {
     background-color: var(--primary-color);
     color: #fff;
     border: none;
@@ -182,7 +182,7 @@ a:hover {
 /*Formulario de contacto*/
 
 #contacto {
-    background-image: url("./imagenes/contacto1.png");
+    background-image: url("/imagenes/contacto1.png");
     background-size: cover;
     background-position: center;
     padding: 3rem;
