--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ a:hover {
 /*Formulario de contacto*/
 
 #contacto {
-    background-image: url("./imagenes/contacto1.png");
+    background-image: url("./imagenes/contacto.png");
     background-size: cover;
     background-position: center;
     padding: 3rem;
